# INIReadWrite

./: CMakeLists.txt  IniFile.cpp  IniFile.h  IniReader.cpp  IniReader.h  IniWriter.cpp  IniWriter.h  README.md  main.cpp
test/: CMakeLists.txt  IniTest.cpp  IniTestFixture.cpp  RunAllTests.cpp
